# netrans

netrans/: Makefile.am  boost  configure.ac  icu  libtool  rapidjson
netrans/api/: decoder_json.h
netrans/common_utils/: exceptions.hpp  file_util.hpp  string_util.hpp
netrans/preprocess/: Makefile.am
netrans/preprocess/interface/: Makefile.am
netrans/preprocess/netrans/: Makefile.am  ne_formatter.hpp  ne_recognizer.cpp  ne_recognizer.h  ne_recognizer_resource.cpp  ne_recognizer_resource.h  ne_types.hpp  netrans_test.cpp
netrans/resources/zh/: pattern.txt
netrans/seg_utils/: Makefile.am  charactor_handler.cpp  charactor_handler.h
netrans/utils/: Makefile.am  unicode_converter.cpp  unicode_converter.h
