#-I/home/parallels/mylibs/boost_1_53/include -I/home/parallels/mylibs/icu_50_1_2/include
AM_CPPFLAGS=-O0  -I../ -I../../ -I../../boost/include 
AM_CXXFLAGS=-O0 -L/home/parallels/mylibs/boost_1_53/lib 
#AM_CFLAGS=-O0 -L/home/parallels/mylibs/boost_1_53/lib

noinst_LTLIBRARIES=libseg_utils.la
libseg_utils_la_SOURCES=charactor_handler.cpp


