CPPFLAGS+=-O0 -g
AM_CPPFLAGS= -I/home/parallels/mylibs/boost_1_53/include 
CXXFLAGS+=-O0 -g 
AM_CXXFLAGS=-L/home/parallels/mylibs/boost_1_53/lib 
CFLAGS+=-O0 -g
##bin_PROGRAMS=test_regex
##test_regex_SOURCES=testproject1.cpp
##test_regex_LDADD=-lboost_regex -licuuc -licui18n -licudata -licuio -licule -liculx
#AM_CFLAGS=-O0 -L/home/parallels/mylibs/boost_1_53/lib

noinst_LTLIBRARIES=libutils.la
libutils_la_SOURCES=unicode_converter.cpp
